finish styling seventh row and make sixth and seventh row content stop wrapping at 570px width, and use percentage margins to maintain rightward position of seventh row content(Thor)

--- a/style.css
+++ b/style.css
@@ -190,17 +190,38 @@ html, body {
     font-style: light italic;
     color: #1F2937;
     margin-top: 45px;
-    /*padding-left: 200px;
-    padding-right: 200px;*/
     padding-top: 130px;
     padding-bottom: 130px;
 }
 
 .sixth_row-box div {
-    min-width: 450px;
+    min-width: 570px;
     max-width: 811.24px;
     margin-left: 20px;
     margin-right: 20px;
 }
 
+.seventh_row-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-width: 200px;
+    padding-right: 10px;
+}
 
+.seventh_row-box div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 800;
+    font-size: 23px;
+    margin-top: -220px;
+    margin-left: 56.5%;
+    margin-right: auto;
+    padding-left: 10px;
+    white-space: nowrap;
+}
+
+.eighth_row-box {
+    margin-top: 200px;
+}
